Please see docs/KNOWN_BUGS file for more information

v2.5.59s
* Bugtracker bugs fixed:
  #975: ipsec_setup: Unknown socket write error 96. [paul]

v2.5.58s
- Various memory leak fixes [Shingo Yamawaki]
- rekey= was reversing yes/no in the parser [Shingo Yamawaki]
- DPD fix for when behind NAT and in Aggressve Mode [hiren joshi]
- Fix memory leak when we run out of descriptors [David McCullough]
- Update stats to show dropped packets [David McCullough]
- SA refcount fixes [David McCullough]

v2.5.57s
- Various fixes related to mast/saref code for ixs/irs objects [mcr/bart/paul]
- Fix using saved_ipsp to fix a refcount issue [Shingo Yamawaki]

v2.5.56s [untagged it git]

v2.5.55s [untagged it git]

v2.5.54s [untagged it git]

v2.5.53s [untagged it git]
* Fixed IPSEC table handling in scripts [paul]
  (Reported bug by Sony 12-06-2008)

v2.5.52s [untagged it git]
* removed a spin_unlock in IP compress [david]
* updated patches/2.6.16/* [paul]

v2.5.51s
* Various fixes were not commited to git, which were released as
  2.5.50s. Mostly related to 2.6.[23]+ and suse building [paul]
* Updated patches/2.6.[23]/klips.patch files [paul]

v2.5.18 / v2.5.50s
* KLIPSNG IPsec SAref support for clashing Virtual IP support [mcr]
  (required for xl2tpd ipsec saref support, see)
* ipsec saref cleanup / internal merge [paul]
* added pre-made nat-t patch to nat-t/ directory [paul]
* Bugtracker bugs fixed
 #917: pluto fails to compile when using pam. xauth [folti]

v2.5.17
* Implemented netlink_shunt_eroute() [paul]
* Simplified _updown.netkey [tuomo]
* Bugtracker bugs fixed
  #460: Fix bogus header with delayed MAIN I2->R2 [Herbert Xu]
  #496: kernel_alg_esp_auth_ok() call fixed - [gernot]
  #761: pluto crashes after removing interface [Tillman Baumann]
  #897/731: crash in alg_info_snprint() - ["Deep Throat"]
  #889: backport from #ikev2 branch to fix ipsec_delete_sa with NETKEY [mcr]

#ikev2
* IKEv2 support

#stable